--- a/layouts/_default/_markup/render-image.html
+++ b/layouts/_default/_markup/render-image.html
@@ -7,6 +7,6 @@
     {{ $class = index $parts 0 | strings.TrimLeft "." }}
     {{ $text = index $parts 1 }}
 {{ end }}
-<p{{ with $class}} class="{{ $class }}"{{ end }}>
+<p{{ with $class}} class="{{ $class | safeHTMLAttr }}"{{ end }}>
 <img src="{{ .Destination | safeURL }}" alt="{{ $text }}" {{ with .Title }} title="{{ .Title }}"{{ end }} />
 </p>
